--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ blinker==1.9.0
 click==8.3.1
 dnspython==2.8.0
 Flask==3.1.3
+flask-cors==6.0.2
 Flask-JWT-Extended==4.7.1
 gunicorn==25.1.0
 itsdangerous==2.2.0
